@@ -49,7 +49,9 @@ class Forum_page( Product_page ):
         [ Div(
           A(
             thread.name,
-            href = os.path.join( base_path, ( forum_name == u"blog" ) and thread.friendly_id or thread.object_id ),
+            href = ( forum_name == u"blog" ) and \
+              os.path.join( base_path, thread.friendly_id ) or \
+              "%s?posts=%s" % ( os.path.join( base_path, thread.object_id ), thread.note_count ),
           ),
           Span(
             self.post_count( thread, forum_name ),
